网页css代码更新

--- a/wxss/app.json
+++ b/wxss/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
     "index/index",
-    "index/aa"
+    "index/aa",
+    "index/aa1",
+    "index/details",
+    "index/nowgo"
   ],
   "window": {
     "backgroundTextStyle": "light",
