--- a/wxss/project.config.json
+++ b/wxss/project.config.json
@@ -39,13 +39,33 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
 					"name": "aa",
 					"pathName": "index/aa",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "aa1",
+					"pathName": "index/aa1",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "details",
+					"pathName": "index/details",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "nowgo",
+					"pathName": "index/nowgo",
 					"scene": null
 				}
 			]
