--- a/src/app.json
+++ b/src/app.json
@@ -6,9 +6,9 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#232323",
+    "navigationBarTitleText": "UCCA",
+    "navigationBarTextStyle": "white"
   },
   "tabBar": {
     "color": "#999",
