--- a/wxss/project.config.json
+++ b/wxss/project.config.json
@@ -13,8 +13,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wx80bc2a15d6bbe9d8",
-	"projectname": "%E5%89%A7",
+	"appid": "wx72458a2c0b261e69",
+	"projectname": "wxss",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
