--- a/src/app.json
+++ b/src/app.json
@@ -2,13 +2,10 @@
   "pages": [
     "pages/index/main",
     "pages/logs/main",
-    "pages/counter/main"
+    "pages/counter/main",
+    "pages/activeInfo/main"
   ],
   "window": {
-    "backgroundColor": "#000000",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#232323",
-    "navigationBarTitleText": "UCCA",
-    "navigationBarTextStyle": "white"
+    "navigationStyle": "custom"
   }
 }
