展览详情页面

--- a/src/app.json
+++ b/src/app.json
@@ -3,7 +3,8 @@
     "pages/index/main",
     "pages/logs/main",
     "pages/counter/main",
-    "pages/activeInfo/main"
+    "pages/activeInfo/main",
+    "pages/exhibitionInfo/main"
   ],
   "window": {
     "navigationStyle": "custom"
