--- a/src/app.json
+++ b/src/app.json
@@ -4,7 +4,8 @@
     "pages/purchase/main",
     "pages/counter/main",
     "pages/activeInfo/main",
-    "pages/exhibitionInfo/main"
+    "pages/exhibitionInfo/main",
+    "pages/order/main"
   ],
   "window": {
     "navigationStyle": "custom"
