--- a/wxss/project.config.json
+++ b/wxss/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.0",
-	"appid": "wx72458a2c0b261e69",
+	"appid": "wx25331d4268392a6a",
 	"projectname": "wxss",
 	"debugOptions": {
 		"hidedInDevtools": []
