展览页面立即购买的下一步，确认支付

--- a/src/app.json
+++ b/src/app.json
@@ -5,7 +5,8 @@
     "pages/counter/main",
     "pages/activeInfo/main",
     "pages/exhibitionInfo/main",
-    "pages/order/main"
+    "pages/order/main",
+    "pages/exhibitionConfirmOrder/main"
   ],
   "window": {
     "navigationStyle": "custom"
