展览票面，普通票、可预约、已预约

--- a/src/app.json
+++ b/src/app.json
@@ -6,7 +6,8 @@
     "pages/activeInfo/main",
     "pages/exhibitionInfo/main",
     "pages/order/main",
-    "pages/exhibitionConfirmOrder/main"
+    "pages/exhibitionConfirmOrder/main",
+    "pages/purchaseSuccess/main"
   ],
   "window": {
     "navigationStyle": "custom"
