--- a/wxss/project.config.json
+++ b/wxss/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -98,9 +98,38 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 8,
 					"name": "order",
 					"pathName": "index/order",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "code",
+					"pathName": "index/code",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "code2",
+					"pathName": "index/code2",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "code3",
+					"pathName": "index/code3",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "me1",
+					"pathName": "index/me1",
+					"query": "",
 					"scene": null
 				}
 			]
