会员权益页面

--- a/src/app.json
+++ b/src/app.json
@@ -9,7 +9,8 @@
     "pages/exhibitionConfirmOrder/main",
     "pages/purchaseSuccess/main",
     "pages/me/main",
-    "pages/userCenter/main"
+    "pages/userCenter/main",
+    "pages/memberBenefits/main"
   ],
   "window": {
     "navigationStyle": "custom"
