--- a/wxss/app.json
+++ b/wxss/app.json
@@ -13,7 +13,17 @@
     "index/code",
     "index/code2",
     "index/code3",
-    "index/me1"
+    "index/me1",
+    "index/me2",
+    "index/me3",
+    "index/me-win",
+    "index/me-infor1",
+    "index/me-infor2",
+    "index/me-infor",
+    "index/me-card",
+    "index/me-infor3",
+    "index/me-results1",
+    "index/me-result2"
   ],
   "window": {
     "backgroundTextStyle": "light",
