个人中心模块：我的票（还没完成）、我的收藏；导览模块：还剩一部分

--- a/src/app.json
+++ b/src/app.json
@@ -13,7 +13,12 @@
     "pages/memberBenefits/main",
     "pages/writeInformation/main",
     "pages/verifyInformation/main",
-    "pages/memberCard/main"
+    "pages/memberCard/main",
+    "pages/myExhibition/main",
+    "pages/myTicket/main",
+    "pages/reservation/main",
+    "pages/guide/main",
+    "pages/exhibitionHall/main"
   ],
   "window": {
     "navigationStyle": "custom"
