--- a/wxss/app.json
+++ b/wxss/app.json
@@ -23,7 +23,22 @@
     "index/me-card",
     "index/me-infor3",
     "index/me-results1",
-    "index/me-result2"
+    "index/me-result2",
+    "index/my1",
+    "index/my-ticket",
+    "index/booking-time",
+    "index/booking-time1",
+    "index/booking-time2",
+    "index/booking-time3",
+    "index/booking-time4",
+    "index/booking-time1-",
+    "index/my-show",
+    "index/my-actity",
+    "index/my-activity",
+    "index/share-card1",
+    "index/share-card2",
+    "index/guide",
+    "index/guide1"
   ],
   "window": {
     "backgroundTextStyle": "light",
