--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "wx25331d4268392a6a",
+	"appid": "wx851c095befb3bd72",
 	"projectname": "Ucca",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
