--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "^2.4.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.5.1",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
@@ -72,6 +73,7 @@
     "postcss-mpvue-wxss": "^1.0.0",
     "prettier": "~1.12.1",
     "px2rpx-loader": "^0.1.10",
+    "qs": "^6.7.0",
     "relative": "^3.0.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
